lb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb-service
  annotations:
    networking.gke.io/load-balancer-type: "External"
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
