ingress-http-svc2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-lb
spec:
  rules:
  - host: gketest.google.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-lb-service
            port:
              number: 80
